pushing to prod

--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "axios": "^1.7.3",
     "collections": "^5.1.13",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "googleapis": "^140.0.1",
     "heap": "^0.2.7",
     "heap-js": "^2.5.0",
+    "install": "^0.13.0",
+    "jose": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "node-cache": "^5.1.2",
+    "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.7.5",
